App Drawer Complete with Added close functionality , Orders Tab Pane Complete